@@ -1,4 +1,10 @@
-1999-04-27  Linus Nordberg  <linus@swox.se>
+1999-04-28  Linus Nordberg  <linus@swox.se>
+
+	* findcl.c (main): Print low and high merit on startup.
+	(sh_status): New function.
+	(main): Catch SEGV and HUP.
+
+b1999-04-27  Linus Nordberg  <linus@swox.se>
 
 	* Makefile (clean): Add target.
 
